package.json edited

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "https://github.com/GideonJulian/Estatien-.git",
+{"homepage": "https://github.com/GideonJulian/Estatien-",
   "name": "estetien",
   "private": true,
   "version": "0.0.0",
